@@ -2209,7 +2209,7 @@ function_body
 file
    : /* empty */
      {
-       werror(W_EMPTY_SOURCE_FILE);
+       werror(W_EMPTY_TRANSLATION_UNIT);
      }
    | translation_unit
    ;
